# flint

./: .gitignore  .mcp.json  README.md  action.yml  pyproject.toml  setup-rootfs.sh
.agents/skills/mintlify/: SKILL.md
.github/workflows/: build-agent-images.yml  ci.yml  publish-image.yml
agents/hermes/: Dockerfile
agents/openclaw/: Dockerfile
assets/: init-net.sh  init-vz.sh
docs/: conftest.py  docs.json  introduction.mdx  quickstart.mdx  test_docs.py
docs/api-reference/: exec.mdx  files.mdx  health.mdx  overview.mdx  processes.mdx  templates.mdx  terminal.mdx  vms.mdx
docs/architecture/: backends.mdx  golden-snapshots.mdx  guest-agent.mdx  networking.mdx  overview.mdx
docs/cli/: agents.mdx  app.mdx  backends.mdx  list.mdx  overview.mdx  start.mdx  stop.mdx
docs/sdk/: agents.mdx  commands.mdx  pty.mdx  sandbox.mdx  templates.mdx
examples/: github-actions-workflow.yml
guest/: tcp-relay.c
guest/flintd/: go.mod  handlers_exec.go  handlers_files.go  handlers_health.go  handlers_mount.go  handlers_process.go  handlers_ws.go  main.go  process.go  process_manager.go  server.go
images/base/: Dockerfile
scripts/: install-crane.sh  install-deps.sh
services/r2nfs/: cache.go  exports.go  go.mod  main.go  mgmt_test.go  mock_r2_test.go  nfshandler.go  overlay.go  overlay_test.go  r2client.go
src/flint/: __init__.py  cli.py  errors.py  runner.py  sandbox.py  template.py
src/flint/_client/: __init__.py  client.py  events.py  logs.py
src/flint/agents/: __init__.py  agent.py  catalog.py
src/flint/core/: __init__.py  _boot.py  _ch_boot.py  _cloud_hypervisor.py  _firecracker.py  _health.py  _image_build.py  _install.py  _jailer.py  _lifecycle.py  _logs.py  _metrics.py  _netns.py  _oci_cache.py  _oci_pull.py  _pool.py  _proxy.py  _proxy_server.py  _recovery.py  _setup_wizard.py  _snapshot.py  _tcp.py  (+14 more)
tests/: conftest.py  test_agents.py  test_config_http.py  test_e2e.py  test_events_ws.py  test_linux_backend.py  test_logs_ws.py  test_metrics_http.py  test_volumes_http.py
tests/unit/: conftest.py  test_backend_registry.py
(+51 files in other folders)
