[project]
name = "flint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jacques Verre", email = "jverre@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "textual>=8.0.1",
    "pyte>=0.8",
    "pyroute2>=0.9.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "websockets>=14.0",
    "mitmproxy>=10.0",
]

[project.scripts]
flint = "flint.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/flint"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (template builds, etc.) - deselect with '-m \"not slow\"'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
